--- a/MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono2/MarcelJoachimKloubert.CLRToolbox.Mono2.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono2/MarcelJoachimKloubert.CLRToolbox.Mono2.csproj
@@ -72,6 +72,7 @@
     <Folder Include="Execution\Commands\" />
     <Folder Include="Execution\Jobs\" />
     <Folder Include="Sessions\" />
+    <Folder Include="Data\Xml\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\_Compatibility\System\Action.cs">
@@ -1394,6 +1395,39 @@
     </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Execution\Jobs\DelegateJob.cs">
       <Link>Execution\Jobs\DelegateJob.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Xml\IXmlAttribute.cs">
+      <Link>Data\Xml\IXmlAttribute.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Xml\IXmlCData.cs">
+      <Link>Data\Xml\IXmlCData.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Xml\IXmlComment.cs">
+      <Link>Data\Xml\IXmlComment.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Xml\IXmlContainer.cs">
+      <Link>Data\Xml\IXmlContainer.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Xml\IXmlDocument.cs">
+      <Link>Data\Xml\IXmlDocument.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Xml\IXmlDocumentType.cs">
+      <Link>Data\Xml\IXmlDocumentType.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Xml\IXmlElement.cs">
+      <Link>Data\Xml\IXmlElement.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Xml\IXmlNode.cs">
+      <Link>Data\Xml\IXmlNode.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Xml\IXmlObject.cs">
+      <Link>Data\Xml\IXmlObject.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Xml\IXmlProcessingInstruction.cs">
+      <Link>Data\Xml\IXmlProcessingInstruction.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Xml\IXmlText.cs">
+      <Link>Data\Xml\IXmlText.cs</Link>
     </Compile>
   </ItemGroup>
 </Project>
