--- a/MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono2/MarcelJoachimKloubert.CLRToolbox.Mono2.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono2/MarcelJoachimKloubert.CLRToolbox.Mono2.csproj
@@ -73,6 +73,7 @@
     <Folder Include="Execution\Jobs\" />
     <Folder Include="Sessions\" />
     <Folder Include="Data\Xml\" />
+    <Folder Include="Data\Xml\_Impl\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\_Compatibility\System\Action.cs">
@@ -1428,6 +1429,39 @@
     </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Xml\IXmlText.cs">
       <Link>Data\Xml\IXmlText.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Xml\_Impl\_XmlAttribute.cs">
+      <Link>Data\Xml\_Impl\_XmlAttribute.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Xml\_Impl\_XmlCDData.cs">
+      <Link>Data\Xml\_Impl\_XmlCDData.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Xml\_Impl\_XmlComment.cs">
+      <Link>Data\Xml\_Impl\_XmlComment.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Xml\_Impl\_XmlContainer.cs">
+      <Link>Data\Xml\_Impl\_XmlContainer.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Xml\_Impl\_XmlDocument.cs">
+      <Link>Data\Xml\_Impl\_XmlDocument.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Xml\_Impl\_XmlDocumentType.cs">
+      <Link>Data\Xml\_Impl\_XmlDocumentType.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Xml\_Impl\_XmlElement.cs">
+      <Link>Data\Xml\_Impl\_XmlElement.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Xml\_Impl\_XmlNode.cs">
+      <Link>Data\Xml\_Impl\_XmlNode.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Xml\_Impl\_XmlObject.cs">
+      <Link>Data\Xml\_Impl\_XmlObject.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Xml\_Impl\_XmlProcessingInstructions.cs">
+      <Link>Data\Xml\_Impl\_XmlProcessingInstructions.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Xml\_Impl\_XmlText.cs">
+      <Link>Data\Xml\_Impl\_XmlText.cs</Link>
     </Compile>
   </ItemGroup>
 </Project>
