--- a/MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono2/MarcelJoachimKloubert.CLRToolbox.Mono2.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono2/MarcelJoachimKloubert.CLRToolbox.Mono2.csproj
@@ -1463,5 +1463,8 @@
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Xml\_Impl\_XmlText.cs">
       <Link>Data\Xml\_Impl\_XmlText.cs</Link>
     </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Xml\XmlDocumentFactory.cs">
+      <Link>Data\Xml\XmlDocumentFactory.cs</Link>
+    </Compile>
   </ItemGroup>
 </Project>
