added first NUnit based tests

--- a/MarcelJoachimKloubert.CLRToolbox.Tests.Net45/MarcelJoachimKloubert.CLRToolbox.Tests.Net45.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.Tests.Net45/MarcelJoachimKloubert.CLRToolbox.Tests.Net45.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{F4F110AE-01E4-4323-8167-31F4010E80F2}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MarcelJoachimKloubert.CLRToolbox.Tests.Net45</RootNamespace>
+    <RootNamespace>MarcelJoachimKloubert.CLRToolbox.Tests</RootNamespace>
     <AssemblyName>MarcelJoachimKloubert.CLRToolbox.Tests.Net45</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -32,6 +32,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework">
+      <HintPath>..\Libs\nunit.framework.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.mocks">
+      <HintPath>..\Libs\nunit.mocks.dll</HintPath>
+    </Reference>
+    <Reference Include="pnunit.framework">
+      <HintPath>..\Libs\pnunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,7 +50,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.Tests.Net20\CollectionTests.cs">
+      <Link>CollectionTests.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.Tests.Net20\Program.cs">
+      <Link>Program.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
