--- a/MarcelJoachimKloubert.CLRToolbox.Tests.Net20/MarcelJoachimKloubert.CLRToolbox.Tests.Net20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.Tests.Net20/MarcelJoachimKloubert.CLRToolbox.Tests.Net20.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{27899432-06C9-4F0C-A530-CE590826E014}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MarcelJoachimKloubert.CLRToolbox.Tests.Net20</RootNamespace>
+    <RootNamespace>MarcelJoachimKloubert.CLRToolbox.Tests</RootNamespace>
     <AssemblyName>MarcelJoachimKloubert.CLRToolbox.Tests.Net20</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -32,13 +32,26 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework">
+      <HintPath>..\Libs\nunit.framework.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.mocks">
+      <HintPath>..\Libs\nunit.mocks.dll</HintPath>
+    </Reference>
+    <Reference Include="pnunit.framework">
+      <HintPath>..\Libs\pnunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CollectionTests.cs" />
+    <Compile Include="DelegateCacheTests.cs" />
+    <Compile Include="ObjectTests.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandomTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MarcelJoachimKloubert.CLRToolbox.20.Web\MarcelJoachimKloubert.CLRToolbox.20.Web.csproj">
