--- a/MarcelJoachimKloubert.CLRToolbox.Tests.Net20/MarcelJoachimKloubert.CLRToolbox.Tests.Net20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.Tests.Net20/MarcelJoachimKloubert.CLRToolbox.Tests.Net20.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomTests.cs" />
+    <Compile Include="StringTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MarcelJoachimKloubert.CLRToolbox.20.Web\MarcelJoachimKloubert.CLRToolbox.20.Web.csproj">
