moved test projects to sub folders

--- a/.gitignore
+++ b/.gitignore
@@ -276,11 +276,11 @@ Projects/MarcelJoachimKloubert.Sandbox/MarcelJoachimKloubert.Sandbox.v12.suo
 MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/MarcelJoachimKloubert.CLRToolbox.XNA.40.csproj.user
 /Projects/MarcelJoachimKloubert.DragNBatch/MarcelJoachimKloubert.DragNBatch.PlugIns.ShredderPlugIn/obj
 /Projects/MarcelJoachimKloubert.DragNBatch/MarcelJoachimKloubert.DragNBatch.PlugIns.ShredderPlugIn/bin
-/MarcelJoachimKloubert.CLRToolbox.Tests.Net20/obj
-/MarcelJoachimKloubert.CLRToolbox.Tests.Net20/bin
-/MarcelJoachimKloubert.CLRToolbox.Tests.Net35/obj
-/MarcelJoachimKloubert.CLRToolbox.Tests.Net35/bin
-/MarcelJoachimKloubert.CLRToolbox.Tests.Net40/obj
-/MarcelJoachimKloubert.CLRToolbox.Tests.Net40/bin
-/MarcelJoachimKloubert.CLRToolbox.Tests.Net45/obj
-/MarcelJoachimKloubert.CLRToolbox.Tests.Net45/bin
+/Tests/MarcelJoachimKloubert.CLRToolbox.Tests.Net20/obj
+/Tests/MarcelJoachimKloubert.CLRToolbox.Tests.Net20/bin
+/Tests/MarcelJoachimKloubert.CLRToolbox.Tests.Net35/obj
+/Tests/MarcelJoachimKloubert.CLRToolbox.Tests.Net35/bin
+/Tests/MarcelJoachimKloubert.CLRToolbox.Tests.Net40/obj
+/Tests/MarcelJoachimKloubert.CLRToolbox.Tests.Net40/bin
+/Tests/MarcelJoachimKloubert.CLRToolbox.Tests.Net45/obj
+/Tests/MarcelJoachimKloubert.CLRToolbox.Tests.Net45/bin
