--- a/Tests/MarcelJoachimKloubert.CLRToolbox.Tests.Net40/MarcelJoachimKloubert.CLRToolbox.Tests.Net40.csproj
+++ b/Tests/MarcelJoachimKloubert.CLRToolbox.Tests.Net40/MarcelJoachimKloubert.CLRToolbox.Tests.Net40.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{27899432-06C9-4F0C-A530-CE590826E014}</ProjectGuid>
+    <ProjectGuid>{F8B8E839-8145-4387-ABBC-93C250C18F28}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MarcelJoachimKloubert.CLRToolbox.Tests</RootNamespace>
-    <AssemblyName>MarcelJoachimKloubert.CLRToolbox.Tests.Net20</AssemblyName>
-    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
+    <AssemblyName>MarcelJoachimKloubert.CLRToolbox.Tests.Net40</AssemblyName>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -21,7 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <LangVersion>ISO-2</LangVersion>
+    <LangVersion>4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -43,30 +44,52 @@
       <HintPath>..\Libs\pnunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CollectionTests.cs" />
-    <Compile Include="DelegateCacheTests.cs" />
-    <Compile Include="ObjectTests.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.Tests.Net20\CollectionTests.cs">
+      <Link>CollectionTests.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.Tests.Net20\DelegateCacheTests.cs">
+      <Link>DelegateCacheTests.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.Tests.Net20\ObjectTests.cs">
+      <Link>ObjectTests.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.Tests.Net20\Program.cs">
+      <Link>Program.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.Tests.Net20\RandomTests.cs">
+      <Link>RandomTests.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.Tests.Net20\StringTests.cs">
+      <Link>StringTests.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RandomTests.cs" />
-    <Compile Include="StringTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MarcelJoachimKloubert.CLRToolbox.20.Web\MarcelJoachimKloubert.CLRToolbox.20.Web.csproj">
-      <Project>{2be8a6c6-a3b9-4a60-80c8-530a7c308794}</Project>
-      <Name>MarcelJoachimKloubert.CLRToolbox.20.Web</Name>
+    <None Include="app.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\MarcelJoachimKloubert.CLRToolbox.40.Web\MarcelJoachimKloubert.CLRToolbox.40.Web.csproj">
+      <Project>{dc3ca98c-2b04-4603-ac85-7ea34ecd393b}</Project>
+      <Name>MarcelJoachimKloubert.CLRToolbox.40.Web</Name>
     </ProjectReference>
-    <ProjectReference Include="..\MarcelJoachimKloubert.CLRToolbox.20.WinForms\MarcelJoachimKloubert.CLRToolbox.20.WinForms.csproj">
-      <Project>{6162a233-c998-43c0-b78b-fb090310d6b5}</Project>
-      <Name>MarcelJoachimKloubert.CLRToolbox.20.WinForms</Name>
+    <ProjectReference Include="..\..\MarcelJoachimKloubert.CLRToolbox.40.WinForms\MarcelJoachimKloubert.CLRToolbox.40.WinForms.csproj">
+      <Project>{bc5d8ca7-49d2-4554-adaa-465dc41d71a9}</Project>
+      <Name>MarcelJoachimKloubert.CLRToolbox.40.WinForms</Name>
     </ProjectReference>
-    <ProjectReference Include="..\MarcelJoachimKloubert.CLRToolbox.20\MarcelJoachimKloubert.CLRToolbox.20.csproj">
-      <Project>{231dba7a-c365-4712-bbed-19700f464cab}</Project>
-      <Name>MarcelJoachimKloubert.CLRToolbox.20</Name>
+    <ProjectReference Include="..\..\MarcelJoachimKloubert.CLRToolbox.40.WPF\MarcelJoachimKloubert.CLRToolbox.40.WPF.csproj">
+      <Project>{e170965a-d068-40e8-a37f-f480b6f1cb5f}</Project>
+      <Name>MarcelJoachimKloubert.CLRToolbox.40.WPF</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\MarcelJoachimKloubert.CLRToolbox.40\MarcelJoachimKloubert.CLRToolbox.40.csproj">
+      <Project>{50e0cdb2-bc51-4c46-949a-387e3534041f}</Project>
+      <Name>MarcelJoachimKloubert.CLRToolbox.40</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
